# name: TestFind.test_archived[False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'f60bae36',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': 'da42dca3',
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7cf872dc',
        'progress': 10,
        'stage': 'NzFJEUSgqMReEKilxKJT',
        'state': 'preparing',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  }
---
# name: TestFind.test_archived[True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'preparing': <class 'dict'> {
        'jobs_pathoscope_bowtie': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_pathoscope_bowtie': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': <class 'str'>,
        'id': '09d01419',
        'progress': 100,
        'stage': 'GapNGCiKyJNmNoZgTcnB',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': <class 'str'>,
        'id': '3cbb22cc',
        'progress': 30,
        'stage': 'NkznHZPGfxsRfFzDHwBJ',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'fb085f7f',
        },
        'workflow': 'jobs_nuvs',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  }
---
# name: TestFind.test_basic
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'jobs_create_sample': 1,
      },
      'complete': <class 'dict'> {
        'jobs_create_sample': 1,
      },
      'error': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_create_sample': 1,
        'jobs_pathoscope_bowtie': 1,
      },
      'terminated': <class 'dict'> {
        'jobs_build_index': 1,
        'jobs_nuvs': 2,
      },
      'timeout': <class 'dict'> {
        'jobs_aodp': 1,
      },
      'waiting': <class 'dict'> {
        'jobs_aodp': 1,
        'jobs_nuvs': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '9c61c0ca',
        'progress': 30,
        'stage': 'CvVtXeeYGAaIAXQZUmce',
        'state': 'terminated',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '7cce8f87',
        'progress': 50,
        'stage': 'nOHABdcaOhguYUqQeuEZ',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_pathoscope_bowtie',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '83e4c4f6',
        'progress': 60,
        'stage': 'iLUYCkyqgDOaIrTOqeaP',
        'state': 'error',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '606cd773',
        'progress': 100,
        'stage': 'DTrfalRqlzXAreDlttNm',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': <class 'str'>,
        'id': '031ff6cb',
        'progress': 60,
        'stage': 'GNkXjEpGpwJnLsgFiwud',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'zclark',
          'id': '7cf872dc',
        },
        'workflow': 'jobs_create_sample',
      },
    ],
    'found_count': 11,
    'page': 1,
    'page_count': 3,
    'per_page': 5,
    'total_count': 11,
  }
---
# name: TestFind.test_state_invalid
  <class 'list'> [
    <class 'dict'> {
      'in': 'query string',
      'loc': <class 'list'> [
        'state',
        0,
      ],
      'msg': "value is not a valid enumeration member; permitted: 'cancelled', 'complete', 'error', 'preparing', 'running', 'timeout', 'terminated', 'waiting'",
      'type': 'type_error.enum',
    },
  ]
---
# name: TestPushStatus.test_error[invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: test_cancel[None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 0,
    'rights': <class 'dict'> {
    },
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'laura56',
      'id': '7cf872dc',
    },
    'workflow': 'build_index',
  }
---
